# tt

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/docs/: index.md
src/base/: models.py  views.py
src/base/templates/base/: base.html
src/conf/: settings.py  urls.py
src/project/: models.py
src/repos/: models.py  urls.py  views.py
src/repos/migrations/: 0001_initial.py
src/svtter_template_creator/: __main__.py  lib.py  utils.py
src/ttc/: __main__.py  ttc.py
tests/: test_read.py  test_version.py
