[tool.poetry]
name = "ttc"
version = "0.1.0"
description = ""
authors = ["svtter <xiuhao@thinghoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "thinghoo"
url = "https://nexus.beijing-epoch.com/repository/pypi-thinghoo-group/simple"
default = true

# -- FILE: pytest.ini (or tox.ini)
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
# -- recommended but optional:
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"

[tool.poetry.scripts]
ttc = "ttc.__main__:cli"