[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ttc"
version = "0.3.0"
description = ""
authors = [ "svtter <xiuhao@thinghoo.com>",]
include = [ "src/*",]
[[tool.poetry.source]]
name = "thinghoo"
url = "https://nexus.beijing-epoch.com/repository/pypi-thinghoo-group/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
cookiecutter = "^2.1.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
ttc = "ttc.__main__:cli"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"
